<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:orientation="vertical"
    android:weightSum="50" >

    <Button
        android:id="@+id/play"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:padding="15dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/settings"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:padding="15dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/scores"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:padding="15dp"
        android:text="@string/scores" />

    <Button
        android:id="@+id/help"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:padding="15dp"
        android:text="@string/help" />

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:padding="15dp"
        android:text="@string/exit" />

</LinearLayout>